[gd_scene load_steps=3 format=3 uid="uid://c1yfdfrmpulxv"]

[ext_resource type="Theme" uid="uid://e54ckui14tau" path="res://ui_theme.tres" id="1_5s1o3"]
[ext_resource type="Script" path="res://scripts/pause.gd" id="1_i7cv4"]

[node name="Pause" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_5s1o3")
script = ExtResource("1_i7cv4")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0156863, 0.227451, 0.266667, 0.435294)

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/v_separation = 24

[node name="Label" type="Label" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 128
text = "PAUSED"
horizontal_alignment = 1

[node name="Resume Button" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "RESUME
"

[node name="Main Menu" type="Button" parent="GridContainer"]
process_mode = 3
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "MAIN MENU"

[node name="Exit Button" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "QUIT"

[connection signal="pressed" from="GridContainer/Resume Button" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="GridContainer/Main Menu" to="." method="_on_button_pressed"]
[connection signal="pressed" from="GridContainer/Exit Button" to="." method="_on_exit_button_pressed"]
